[package]
name = "endgame-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
bungie-api = { git = "https://github.com/ViridianLink/bungie-api.git", branch = "main" }
google-sheets-api = { git = "https://github.com/ViridianLink/google-sheets-api.git", branch = "main" }
async-trait = { version = "*", default-features = false }
serenity = { version = "*", default-features = false, features = ["model"] }
sqlx = { version = "*", default-features = false, features = ["any", "macros"] }
futures = { version = "*", default-features = false, features = [
    "async-await",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
